--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	display: table;
 	width: 100%;
 	padding: 0;
-	background: url(/img/overlay.jpg) center center no-repeat;
+	/*background: url(/img/overlay.jpg) center center no-repeat;*/
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -202,6 +202,7 @@ header .intro-text {
 	padding-top: 200px;
 	padding-bottom: 150px;
 	text-align: center;
+	color: black;
 }
 
 .reference-title {
